// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-vwo-cloud's pageVisit destination action: all fields 1`] = `
Object {
  "d": Object {
    "event": Object {
      "name": "vwo_pageView",
      "props": Object {
        "$visitor": Object {
          "props": Object {
            "vwo_fs_environment": "Cr*5Vs3e2@*dYNybfL",
          },
        },
        "isCustomEvent": false,
        "page": Object {
          "testType": "Cr*5Vs3e2@*dYNybfL",
        },
        "url": "Cr*5Vs3e2@*dYNybfL",
        "vwoMeta": Object {
          "metric": Object {},
          "source": "segment.cloud",
        },
      },
      "time": null,
    },
    "msgId": "Cr*5Vs3e2@*dYNybfL-NaN",
    "sessionId": null,
    "visId": "Cr*5Vs3e2@*dYNybfL",
    "visitor": Object {
      "props": Object {
        "vwo_fs_environment": "Cr*5Vs3e2@*dYNybfL",
      },
    },
  },
}
`;

exports[`Testing snapshot for actions-vwo-cloud's pageVisit destination action: required fields 1`] = `
Object {
  "d": Object {
    "event": Object {
      "name": "vwo_pageView",
      "props": Object {
        "$visitor": Object {
          "props": Object {
            "vwo_fs_environment": "Cr*5Vs3e2@*dYNybfL",
          },
        },
        "isCustomEvent": false,
        "page": Object {},
        "vwoMeta": Object {
          "metric": Object {},
          "source": "segment.cloud",
        },
      },
      "time": 1681990265818,
    },
    "msgId": "Cr*5Vs3e2@*dYNybfL-1681990265",
    "sessionId": 1681990265,
    "visId": "Cr*5Vs3e2@*dYNybfL",
    "visitor": Object {
      "props": Object {
        "vwo_fs_environment": "Cr*5Vs3e2@*dYNybfL",
      },
    },
  },
}
`;
